<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

    <Spinner
        android:id="@+id/sensorslist"
        android:layout_width="412dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="0"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:text="Укажите фото:"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/photoView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:scaleType="fitStart"

                tools:ignore="MissingConstraints"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/takePhotoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/doPhoto"
                android:textSize="12sp"
                tools:ignore="MissingConstraints" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nameTextBox"
                android:layout_width="179dp"
                android:layout_height="44dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Укажите ваше имя" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="178dp"
                    android:layout_height="15dp"
                    android:text="@string/brightness"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/brightnessText"
                    android:layout_width="179dp"
                    android:layout_height="18dp"
                    android:text="0"
                    android:textAlignment="textStart"
                    android:textSize="10sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gyroscope"
                    android:textSize="10sp" />
                <TextView
                    android:id="@+id/gyroscopeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="textStart"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/accelerometer"
                    android:textSize="10sp" />
                <TextView
                    android:id="@+id/accelerometerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="textStart"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/motion"
                    android:textSize="10sp" />
                <TextView
                    android:id="@+id/motionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:textAlignment="textStart"
                    android:textSize="10sp" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>